--- a/message-gateway/.settings/org.eclipse.wst.common.component
+++ b/message-gateway/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="message-gateway">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <dependent-module archiveName="message-model.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/message-model/message-model">
             <dependency-type>uses</dependency-type>
         </dependent-module>
